change button to options

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Sleeptime App</h1>
     <p>If I want to fall asleep at...</p>
 
-    <select>
+    <select> <!-- <select> element is used to create a drop-down list -->
       <option>hh</option>
       <option>1</option>
       <option>2</option>
