Update the script to calc sleep time based on user input

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Sleeptime App</h1>
     <p>If I want to fall asleep at...</p>
 
-    <select> <!-- <select> element is used to create a drop-down list -->
+    <select id="hh"> <!-- <select> element is used to create a drop-down list -->
       <option>hh</option>
       <option>1</option>
       <option>2</option>
@@ -26,7 +26,7 @@
       <option>12</option>
     </select>
 
-    <select>
+    <select id="mm">
       <option>mm</option>
       <option>00</option>
       <option>05</option>
@@ -42,7 +42,7 @@
       <option>55</option>
     </select>
 
-    <select>
+    <select id="ampm">
       <option>PM</option>
       <option>AM</option>
     </select>
